# apifest

./: .env  DOCKER SWARM  README.md  api.yaml  app-deployment.yml  backend.dockerfile  docker-compose.yml  docker.yml  postgres.dockerfile
alembic/: env.py
alembic/versions/: 1f57e5744381_user.py  4ffab0585781_user.py  bf2535f7f60b_user.py  d5bfc1497fdf_user.py
app/: pyproject.toml  start.sh
app/app/: main.py
app/app/api/api_v1/: api.py  login.py
app/app/api/api_v1/endpoints/: user.py
app/app/core/: config.py
app/app/models/: __init__.py  user.py
